--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="login_button_text">Login</string>
     <string name="logout_button_text">Logout</string>
     <string name="play_button_text">Play</string>
+    <string name="general_knowledge">General Knowledge</string>
+
 </resources>
